-
Bug
-
Resolution: Done
-
P2: Important
-
6.1.0 FF
-
None
-
824e0ba21a7b1e56264989c243c3138b09458751 (qt/qtdatavis3d/dev) a87f31f2321f5cc838da3827c579f865842a64a2 (qt/qtdatavis3d/6.1)
Due to the software rendering in virtual machines of COIN some tests fail. See if they can be fixed, or possibly skipped when sw rendering is used.
- is required for
-
QTBUG-90926 Update dependencies on 'dev' failed
-
- Closed
-
-
QTBUG-88612
Migrate Qt Data Visualization to Qt 6
-
- Closed
-
| For Gerrit Dashboard: QTBUG-91032 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 333438,4 | Prevent segfault with software renderer | dev | qt/qtdatavis3d | Status: MERGED | +2 | 0 |
| 333900,3 | Prevent segfault with software renderer | 6.1 | qt/qtdatavis3d | Status: MERGED | +2 | 0 |