Prevent segfault with software renderer

SW renderer doesn't have opengles2 config set, so we need to
make sure the pointer does not include garbage.

Fixes: QTBUG-91032
Pick-to: 6.1
Change-Id: I98aa2f10889fe04c2f6f4af6abd0fe559ba686bf
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>